[project]
name = "youtube-video-summarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-generativeai>=0.8.5",
    "pathlib>=1.0.1",
    "python-dotenv>=1.1.1",
    "streamlit>=1.47.1",
    "youtube-transcript-api>=1.2.1",
]
